2002-05-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAssertion.m: Added comments and fixed bug in handling
	an assertion in a function ... was calling va_end() before the last
	use of the arguments.

2002-05-02  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/GSUnixSSLHandle.m: Change '#if HAVE...' to '#ifdef HAVE_...'
	* Source/GSFormat.m: ditto
	* Source/GSHTTPURLHandle.m: ditto
	* Source/GSTcpPort.m: ditto
	* Source/NSBundle.m: ditto
	* Source/NSData.m: ditto
	* Source/NSDate.m: ditto
	* Source/NSFileManager.m: ditto
	* Source/NSHost.m: ditto
	* Source/NSLock.m: ditto
	* Source/NSLog.m: ditto
	* Source/NSPage.m: ditto
	* Source/NSPipe.m: ditto
	* Source/NSProcessInfo.m: ditto
	* Source/NSRunLoop.m: ditto
	* Source/NSString.m: ditto
	* Source/NSTask.m: ditto
	* Source/NSThread.m: ditto
	* Source/NSUser.m: ditto
	* Source/UnixFileHandle.m: ditto
	* Source/WindowsFileHandle.m: ditto
	* Tools/gsdoc.m: ditto
	* Tools/autogsdoc.m: ditto
	Fixes to handle configuration changes where AC_DEFINE is setting
	preprocessor constants to be empty (but defined) rather than to be 1

2002-05-02  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Updated to autoconf 2.53 from configure.in
	* configure, config.h.in: Regenerate.
	* Source/mframe/configure.ac: Idem.
	* SSL/configure.ac: Idem.
	* acconfig.h, aclocal.m4: Remove
	* config/pathxml.m4: New from aclocal.m4.
	* config/objc-con-autoload.m4: Updated from aclocal.m4
	* config/procfs-exe-link.m4: Idem.
	* config/procfs.m4: Idem.

2002-05-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m: Implement ([-hash]) and ([-isEqual:]) based on
	([-absoluteString]) rather than simple pointer comparison.
	* Source/GSHTTPURLHandle.m: ([-bgdConnect]) check for existing
	headers before writing ... avoid overriding them and only set things
	that the programmer has not bothered to set.
	([-loadInBackGround]) use URL port if available.
	More fixes thanks to lcampbel via savannah