@@ -2,7 +2,12 @@
 
 	* Source/NSAssertion.m: Added comments and fixed bug in handling
 	an assertion in a function ... was calling va_end() before the last
-	use of the arguments.
+	use of the arguments.  Also, release new handler after adding it to
+	thread dictionary ... fix memory leak.
+	* Source/NSThread.m: Add fprintf of alert message to STDERR if we
+	are unable to determine the current thread.  Don't attempt to use
+	NSLog() or similar ... since chances are, without a thread object,
+	that would just crash.
 
 2002-05-02  Richard Frith-Macdonald <rfm@gnu.org>
 
